force-app/main/default/objects/All_profie_config__c/All_profie_config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>All profile config</label>
</CustomObject>