force-app/main/default/objects/All_profie_config__c/fields/Allow_All_Profile__c.field-meta.xml
<CustomField>
    <fullName>Allow_All_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow All Profile</label>
    <type>Checkbox</type>
</CustomField>