force-app/main/default/objects/All_profie_config__c/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <label>Profile Id</label>
    <type>TextArea</type>
</CustomField>